force-app/main/default/objects/KCPQ_Zone_Pricing__c/KCPQ_Zone_Pricing__c.object-meta.xml
<CustomObject>
    <description>Object for Zone pricing</description>
    <label>Zone Pricing</label>
    <nameField>
        <label>Zone Pricing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zone Pricing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>