force-app/main/default/objects/KCPQ_Zone_Pricing__c/fields/KCPQ_Pricing_Family__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Pricing_Family__c</fullName>
    <label>Pricing Family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BALAMIN</fullName>
            </value>
            <value>
                <fullName>BASICS FANS*</fullName>
            </value>
            <value>
                <fullName>BUILDER FAN*</fullName>
            </value>
            <value>
                <fullName>BUILDER*</fullName>
            </value>
            <value>
                <fullName>CABINET</fullName>
            </value>
            <value>
                <fullName>DECORATIVE FAN</fullName>
            </value>
            <value>
                <fullName>ELAN</fullName>
            </value>
            <value>
                <fullName>FIXTURES</fullName>
            </value>
            <value>
                <fullName>HOME CENTER</fullName>
            </value>
            <value>
                <fullName>HOME DEPOT</fullName>
            </value>
            <value>
                <fullName>ILS*</fullName>
            </value>
            <value>
                <fullName>LANDSCAPE</fullName>
            </value>
            <value>
                <fullName>LANDSCAPE 12V</fullName>
            </value>
            <value>
                <fullName>LANDSCAPE C - ITEMS</fullName>
            </value>
            <value>
                <fullName>LEADCO</fullName>
            </value>
            <value>
                <fullName>No Pricing Family</fullName>
            </value>
            <value>
                <fullName>RLM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>