force-app/main/default/objects/KCPQ_Zone_Pricing__c/fields/KCPQ_Pricing_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Pricing_Multiplier__c</fullName>
    <label>Pricing Multiplier</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>