force-app/main/default/objects/KCPQ_Zone_Pricing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>KCPQ_Pricing_Family__c</columns>
    <columns>KCPQ_Pricing_Multiplier__c</columns>
    <columns>KCPQ_Zone_Pricing__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>